--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="https://www.thymeleaf.org"
+      xmlns:sec="https://thymeleaf.org/thmeleaf-extras-springsecurity5">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,10 +10,12 @@
     <title>サロンサービス</title>
 </head>
 <body>
+
 <nav class="navbar" role="navigation" aria-label="main navigation">
+    <div clas="container">
     <div class="navbar-brand">
         <a class="navbar-item" href="#">
-            <img src="/images/salon_logo.png" height="48px">
+            <img src="/images/salon_logo.png" width="112" height="28">
         </a>
 
         <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
@@ -53,6 +57,7 @@
                 </div>
             </div>
         </div>
+
         <div class="navbar-end">
             <div class="navbar-item">
                 <div class="buttons">
@@ -66,107 +71,41 @@
             </div>
         </div>
     </div>
-</nav>
-
-
-
-
-
-<header class="nav">
-    <div class="nav-left">
-        <span class="nav-item">
-            <span class="fa fa-language"></span>サロンサービス
-        </span>
-    </div>
-    <div class="nav-right">
-        <span class="nav-item">
-            <div class="control has-addons">
-                <input class="input" type="search" name="search" placeholder="サロン検索">
-                <a class="button is-info"><i class="fa fa-search"></i>検索</a>
-            </div>
-        </span>
-        <span class="nav-item">
-            <a href="#" class="fa fa-user">ログイン</a>
-        </span>
-    </div>
-    <div class="hero is-info is-bold">
-        <div class="hero-body">
-            <div class="container">
-                <h1 class="title">サロンサービス</h1>
-            </div>
-            <h2 class="subtitle">@salonservice</h2>
-        </div>
-    </div>
-    <section class="level">
-        <div class="level-left"></div>
-        <div class="level-right">
-            <div class="level-item tabs">
-                <ul>
-                    <li class="is-active"><a>サロン一覧</a></li>
-                    <li><a>コメント一覧</a></li>
-                </ul>
-            </div>
-        </div>
-        <div class="level-right">
-            <div class="level-item">
-                <a class="button is-greylight">フォロー</a>
-            </div>
-        </div>
-    </section>
-</header>
-
-
-
-<main class="columns">
-    <div class="submenu column is-3">
-        <aside>
-            サロンサービスは誰でも簡単に無料でオンラインサロンを運営することができるサービスです。
-        </aside>
-    </div>
-    <div class="column">
-        本文
-    </div>
-</main>
-
-
-
-
-<nav class="level">
-    <div class="level-item has-text-centered">
-        <div>
-            <p class="heading">サロン</p>
-            <p class="title">3,456</p>
-        </div>
-    </div>
-    <div class="level-item has-text-centered">
-        <div>
-            <p class="heading">ユーザ</p>
-            <p class="title">123</p>
-        </div>
-    </div>
-    <div class="level-item has-text-centered">
-        <div>
-            <p class="heading">スレッド</p>
-            <p class="title">456K</p>
-        </div>
-    </div>
-    <div class="level-item has-text-centered">
-        <div>
-            <p class="heading">イベント</p>
-            <p class="title">789</p>
-        </div>
     </div>
 </nav>
 
-<section class="section">
-    <div class="container">
-        <h1 class="title">
-            サロンサービス
-        </h1>
-        <p class="subtitle">
-            サロンでつながりをつくろう
-        </p>
-    </div>
-</section>
+
+
+
+<img src="/images/salon_logo.png">
+<br />
+
+
+<ul>
+    <li>
+        <a href="/login" sec:authorize="!isAuthenticated()">
+            Login
+        </a>
+    </li>
+    <li>
+        <a href="/sign_up" sec:authorize="!isAuthenticated()">
+            Sign up
+        </a>
+    </li>
+    <li>
+        <a href="/logout" sec:authorize="isAuthenticated()">
+            Logout
+        </a>
+    </li>
+</ul>
+
+
+<ul>
+    <li>サロン: </li>
+    <li>ユーザ: </li>
+    <li>スレッド: </li>
+    <li>イベント: </li>
+</ul>
+
 </body>
 </html>
