--- a/src/main/resources/templates/signup/index.html
+++ b/src/main/resources/templates/signup/index.html
@@ -12,5 +12,21 @@
 <body>
 <h1>ユーザ登録</h1>
 
+<form th:action="@{/sign_up}" method="POST">
+    <div>
+        <label for="useremail">メールアドレス</label>
+        <input type="email" id="useremail" name="userEmail" required>
+    </div>
+    <div>
+        <label for="useremail">ユーザ名</label>
+        <input type="email" id="username" name="userName" required>
+    </div>
+    <div>
+        <label for="password">パスワード</label>
+        <input type="password" id="password" name="password" required>
+    </div>
+    <button type="submit">登録</button>
+</form>
+
 </body>
 
