create /create path

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -26,6 +26,11 @@
             Logout
         </a>
     </li>
+    <li>
+        <a href="/create" sec:authorize="isAuthenticated()">
+            Create Salon
+        </a>
+    </li>
 </ul>
 
 
